# rules_nodejs_test

./: .gitignore  BUILD.bazel  WORKSPACE.bazel  package-lock.json  package.json  tsconfig.json
src/: x.ts
