# vim:set et ts=4 sw=4:

load("@npm//@bazel/typescript:index.bzl", "ts_config", "ts_project")

ts_config(
    name = "config",
    src = ":tsconfig.json",
    # deps = [
    #     "tsconfig-extended.json",
    #     "//packages/typescript/test/ts_project:tsconfig",
    # ],
)

ts_project(
    # composite = True,
    incremental = True,
    tsconfig = ":config",
    # source_map = True,
    # validate = False,
    deps = [
        "@npm//chalk",
        "@npm//opentracing",
    ],
)
